{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "e1d4b1f5-cb18-4f65-87cd-93ec4bf5e6e3",
            "actions": [
                {
                    "name": "Paina",
                    "type": "Button",
                    "id": "8249d491-dfbe-48ce-8318-c7e374092e8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HiirenLiike",
                    "type": "Value",
                    "id": "ea3affc9-b4ab-4771-83b4-ef338f1513db",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickDream",
                    "type": "Button",
                    "id": "be1da607-319a-46a7-86cf-7617b7edebfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseOver",
                    "type": "Button",
                    "id": "f638f178-f70c-4819-893c-6800e2b85380",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ccd1940-d620-4d7e-b999-2b1753a1e51e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paina",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26c03186-81d4-4c7b-b9a5-15639c694658",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HiirenLiike",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25e11c89-4d66-476d-a22f-0ff409a11857",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickDream",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c4dbeec-4de1-4553-ab40-1d6200274ab8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseOver",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}